--- a/src/talks/templates/talks/talks_list.html
+++ b/src/talks/templates/talks/talks_list.html
@@ -1,15 +1,9 @@
-<!DOCTYPE HTML>
-<html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <title>Engipolls</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block content %}
     <h1>Lista de Palestras e Minicursos</h1>
     {% for talk in talks  %}
         <h3>{{ talk.name }}</h3>
         <p>{{ talk.resume }}</p>
         <p>Horário: {{ talk.at|date:"d/M/Y" }}</p>
     {% endfor %}
-</body>
-</html>
+{% endblock content %}
