Inserindo URL do formulário de votação

--- a/src/talks/templates/talks/talks_list.html
+++ b/src/talks/templates/talks/talks_list.html
@@ -6,7 +6,7 @@
         <p>{{ talk.resume }}</p>
         <p>
             Horário: {{ talk.at|date:"d/M/Y" }}
-            <a href="#">Votar agora</a>
+            <a href="{% url poll_form talk.pk %}">Votar agora</a>
         </p>
     {% endfor %}
 {% endblock content %}
